[android] Temporarily disabled Booking reviews activity
[android] Fixed booking items order in PP

--- a/android/res/layout/place_page_hotel_rating.xml
+++ b/android/res/layout/place_page_hotel_rating.xml
@@ -54,4 +54,6 @@
     android:background="?clickableBackground"
     android:gravity="center"
     android:text="@string/placepage_more_reviews_button"/>
+  <include
+    layout="@layout/divider_horizontal"/>
 </LinearLayout>
