--- a/android/res/layout/place_page_hotel_description.xml
+++ b/android/res/layout/place_page_hotel_description.xml
@@ -15,7 +15,7 @@
     android:layout_marginRight="@dimen/margin_base"
     android:layout_marginTop="@dimen/margin_base"
     style="@style/PlacePageTitleText"
-    android:text="@string/details"/>
+    android:text="@string/placepage_place_description"/>
 
   <com.mapswithme.maps.widget.LineCountTextView
     android:id="@+id/tv__place_hotel_details"
