--- a/android/res/layout/place_page_details.xml
+++ b/android/res/layout/place_page_details.xml
@@ -25,8 +25,6 @@
 
     <include layout="@layout/place_page_hotel_description"/>
 
-    <include layout="@layout/place_page_more"/>
-
     <include layout="@layout/place_page_hotel_facilities"/>
 
     <include layout="@layout/place_page_hotel_nearby"/>
@@ -58,6 +56,10 @@
     <include layout="@layout/divider_horizontal"/>
 
     <include layout="@layout/place_page_taxi"/>
+
+    <include layout="@layout/divider_horizontal"/>
+
+    <include layout="@layout/place_page_more"/>
 
     <include layout="@layout/divider_horizontal"/>
 
