--- a/android/res/layout/place_page_hotel_description.xml
+++ b/android/res/layout/place_page_hotel_description.xml
@@ -40,4 +40,14 @@
     android:text="@string/placepage_more_button"/>
 
   <include layout="@layout/divider_horizontal"/>
+
+  <TextView
+    android:id="@+id/tv__place_hotel_more_on_web"
+    style="@style/PlacePageMetadataText.Button"
+    android:height="@dimen/height_block_base"
+    android:background="?clickableBackground"
+    android:gravity="center"
+    android:text="@string/details"/>
+
+  <include layout="@layout/divider_horizontal"/>
 </LinearLayout>
