--- a/android/res/layout/place_page_more.xml
+++ b/android/res/layout/place_page_more.xml
@@ -12,5 +12,5 @@
     android:height="@dimen/height_block_base"
     android:background="?clickableBackground"
     android:gravity="center"
-    android:text="@string/details"/>
+    android:text="@string/details_on_bookingcom"/>
 </LinearLayout>
