--- a/android/res/values/styles-text.xml
+++ b/android/res/values/styles-text.xml
@@ -182,4 +182,8 @@
     <item name="android:textAllCaps">true</item>
     <item name="android:textColor">?bannerText</item>
   </style>
+
+  <style name="MwmTextAppearance.Tab" parent="MwmTextAppearance.Body4">
+    <item name="android:textAllCaps">true</item>
+  </style>
 </resources>
