--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -256,6 +256,14 @@
     <item name="android:gravity">center</item>
   </style>
 
+  <style name="MwmWidget.TabLayout" parent="Widget.Design.TabLayout">
+    <item name="tabMaxWidth">0dp</item>
+    <item name="tabIndicatorColor">?colorAccent</item>
+    <item name="tabTextAppearance">@style/MwmTextAppearance.Tab</item>
+    <item name="tabMode">fixed</item>
+    <item name="tabGravity">fill</item>
+  </style>
+
   <style name="MwmWidget.Downloader.ToolbarButton">
     <item name="android:layout_width">wrap_content</item>
     <item name="android:layout_height">match_parent</item>
